Changed header color, adjusted header text

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
+
   <link rel="stylesheet" href="style.css">  
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
     <h2>Header Logo
       <a>header link 1</a>
       <a>header link 2</a>
-      <a>header link 3</a></h2>
+      <a>header link </a></h2>
     
   </header>
   <section>
@@ -42,32 +42,3 @@
   </section>  
 </body>
 </html>
-
-  
-<!-- <div class:"Header">
-        <div class= "one"><h2>Header Logo</h2></div>
-        <div class= "two"><a>header link one</a></div>
-        <div class= "three"><a>header link two</a></div>
-        <div class= "four"><a>header link three</a></div>
-    </div>  -->
-
-    <!-- <div class="header">
-      <div class="hdr">Header Logo</div>
-      <div class="one">Header link 1</div>
-      <div class="two">Header link 2</div>
-      <div class="link">Header link 3</div>
-    </div>  -->
-=======
-  <meta charset="UTF-8" />
-  <title>TLCP</title>
-</head>
-<body>
-<div class="HC">
-    <h2>Header Logo</h2>
-    <a>Header link 1</a>
-    <a>Header link 2</a>
-    <a>Header link 3</a>
-</div>
-</body>
-</html>
->>>>>>> e149efde2cf67b24b2939ac826f72ccf457aaa6f
