Added display: flex to header tag in css, put 'Header Logo' text inside h2 tag in header

--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 </head>
 <body> 
   <header>
-    <h2>Header Logo
-      <a>header link 1</a>
-      <a>header link 2</a>
-      <a>header link </a></h2>
-    
+    <h2>Header Logo</h2>
+      <a>header link one</a>
+      <a>header link two</a>
+      <a>header link three</a>
   </header>
   <section>
     <article>
