Put header links inside <hlink> element

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body> 
   <header>
     <h2>Header Logo</h2>
+    <hlinks>
       <a>header link one</a>
       <a>header link two</a>
       <a>header link three</a>
+    </hlinks>  
   </header>
   <section>
     <article>
